RoverCode/ros2_ws/log/build_2025-04-08_19-09-48/motor_controller/stdout_stderr.log
running egg_info
writing ../../build/motor_controller/motor_controller.egg-info/PKG-INFO
writing dependency_links to ../../build/motor_controller/motor_controller.egg-info/dependency_links.txt
writing entry points to ../../build/motor_controller/motor_controller.egg-info/entry_points.txt
writing requirements to ../../build/motor_controller/motor_controller.egg-info/requires.txt
writing top-level names to ../../build/motor_controller/motor_controller.egg-info/top_level.txt
reading manifest file '../../build/motor_controller/motor_controller.egg-info/SOURCES.txt'
writing manifest file '../../build/motor_controller/motor_controller.egg-info/SOURCES.txt'
running build
running build_py
copying motor_controller/motor_node_working.py -> /home/spacecraft/ros2_ws/build/motor_controller/build/lib/motor_controller
copying motor_controller/test.py -> /home/spacecraft/ros2_ws/build/motor_controller/build/lib/motor_controller
copying motor_controller/motor_node_david.py -> /home/spacecraft/ros2_ws/build/motor_controller/build/lib/motor_controller
copying motor_controller/motor_node.py -> /home/spacecraft/ros2_ws/build/motor_controller/build/lib/motor_controller
running install
running install_lib
copying /home/spacecraft/ros2_ws/build/motor_controller/build/lib/motor_controller/motor_node_working.py -> /home/spacecraft/ros2_ws/install/motor_controller/lib/python3.12/site-packages/motor_controller
copying /home/spacecraft/ros2_ws/build/motor_controller/build/lib/motor_controller/test.py -> /home/spacecraft/ros2_ws/install/motor_controller/lib/python3.12/site-packages/motor_controller
copying /home/spacecraft/ros2_ws/build/motor_controller/build/lib/motor_controller/motor_node_david.py -> /home/spacecraft/ros2_ws/install/motor_controller/lib/python3.12/site-packages/motor_controller
copying /home/spacecraft/ros2_ws/build/motor_controller/build/lib/motor_controller/motor_node.py -> /home/spacecraft/ros2_ws/install/motor_controller/lib/python3.12/site-packages/motor_controller
byte-compiling /home/spacecraft/ros2_ws/install/motor_controller/lib/python3.12/site-packages/motor_controller/motor_node_working.py to motor_node_working.cpython-312.pyc
byte-compiling /home/spacecraft/ros2_ws/install/motor_controller/lib/python3.12/site-packages/motor_controller/test.py to test.cpython-312.pyc
byte-compiling /home/spacecraft/ros2_ws/install/motor_controller/lib/python3.12/site-packages/motor_controller/motor_node_david.py to motor_node_david.cpython-312.pyc
byte-compiling /home/spacecraft/ros2_ws/install/motor_controller/lib/python3.12/site-packages/motor_controller/motor_node.py to motor_node.cpython-312.pyc
  File "/home/spacecraft/ros2_ws/install/motor_controller/lib/python3.12/site-packages/motor_controller/motor_node.py", line 33
    elif command == 'MEDIUM_SPEED'
                                  ^
SyntaxError: expected ':'

running install_data
running install_egg_info
removing '/home/spacecraft/ros2_ws/install/motor_controller/lib/python3.12/site-packages/motor_controller-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/motor_controller/motor_controller.egg-info to /home/spacecraft/ros2_ws/install/motor_controller/lib/python3.12/site-packages/motor_controller-0.0.0-py3.12.egg-info
running install_scripts
Installing motor_node script to /home/spacecraft/ros2_ws/install/motor_controller/lib/motor_controller
writing list of installed files to '/home/spacecraft/ros2_ws/build/motor_controller/install.log'
